feat: make asset monitoring standalone with shorter site address
